--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
               <h1 class="heading-03">Coming Soon</h1>
               <p class="TextDescription">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
-           <img class="ImageDiv" src="/resources/group 31.png" alt="Image">
+           <img class="ImageDiv" src="resources/group 31.png" alt="Image">
             <div class="greet_03">
                 <h1 class="Year">2024</h1>
                 <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
-                <img src="/resources/Group 96.png" alt="image">
+                <img src="resources/Group 96.png" alt="image">
             </div>
       </section> 
       
