--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
       <section id="box_02">
         <div class="Greeting">
         <h2 class="welcome_Headline">Welcome to midnight party</h2>
-        <p class="sec2_text">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        <p class="sec2_text">Joining a midnight party is an exciting way to celebrate with friends, meet new people, and have fun. A midnight party is a party that starts late at night and lasts until the early hours of the morning. It usually involves music, dancing, food, drinks, and games. 
+
+        </p>
         <button class="btn_02">Join Now</button>
       </div>
         <img class="vectorImg02" src="resources/Group 70.png" alt="Image">
@@ -58,12 +60,12 @@
             <div class="bestOffer">
               <h5 class="offerhead">NEW BEST OFFER</h5>
               <h1 class="heading-03">Coming Soon</h1>
-              <p class="TextDescription">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+              <p class="TextDescription">Are you ready for something amazing? We have a big surprise for you, and we cant wait to share it with you. But you’ll have to be patient, because its coming </p>
             </div>
            <img class="ImageDiv" src="resources/group 31.png" alt="Image">
             <div class="greet_03">
                 <h1 class="Year">2024</h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <p>New year 2024 is the start of a new calendar year and a new hope for the world. </p>
                 <img src="resources/Group 96.png" alt="image">
             </div>
       </section> 
@@ -73,8 +75,7 @@
         <p class="title01">What is Functional</p>
         <h4><span>Holidays</span> Sale 50%</h4>
         <p class="textmsg02">
-          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
-molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.
+          Don’t miss this amazing opportunity to save big on your favorite products. For a limited time only, enjoy 50% off on everything in our store. Hurry, this offer ends soon!
         </p>
        
       </section>
@@ -103,11 +104,7 @@ molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifen
         <p class="title">The best Gifts</p>
         <h4>Our Awesome Portfolio</h4>
         <p class="TextDescription02">
-          Explore our enchanting world of thoughtful treasures! Our gift shop's
-          showcase is brimming with unique items that speak the language of love
-          and celebration. From charming trinkets to elegant keepsakes, each
-          piece tells a story. Discover the perfect gift that resonates with
-          your emotions.
+          We are proud to offer a wide range of high-quality and affordable ladies products, from clothing and accessories to beauty and personal care. Our portfolio features the latest trends, styles, and designs, as well as timeless classics and essentials. Whether you are looking for a casual outfit, a formal dress, a cozy sweater, a chic handbag, a stunning necklace, a moisturizing cream, a feminine wash, or anything in between, you can find it in our portfolio.
         </p>
 
         <div class="product-images">
@@ -128,8 +125,8 @@ molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifen
         <img src="resources/Group 61.png" alt="Mail" />
         <h3>Subscribe Newsletter</h3>
         <p>
-          Subscribe to our Newsletter to get Offer details, Product Details and
-          Information about Our Company. Get Daily Notification about Our
+          Subscribe our Newsletter to get details, 
+          Information about Our Company and Product Details .An also Get Daily Notification about Our
           Company to be Up-To-Date!
         </p>
         <form class="newsLetter-form">
