placeholder and something upgrade

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         
         <!-- Second section starts -->
       <section id="box_02">
+        
         <div class="Greeting">
         <h2 class="welcome_Headline">Welcome to midnight party</h2>
         <p class="sec2_text">Joining a midnight party is an exciting way to celebrate with friends, meet new people, and have fun. A midnight party is a party that starts late at night and lasts until the early hours of the morning. It usually involves music, dancing, food, drinks, and games. 
@@ -130,7 +131,7 @@
           Company to be Up-To-Date!
         </p>
         <form class="newsLetter-form">
-          <input type="email" placeholder="@gmail" />
+          <input type="email" placeholder="enter your manil here" />
           <button type="submit">Subscribe</button>
         </form>
       </section>
