some change happened

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           Company to be Up-To-Date!
         </p>
         <form class="newsLetter-form">
-          <input type="email" placeholder="enter your manil here" />
+          <input type="email" placeholder="enter your mail here" />
           <button type="submit">Subscribe</button>
         </form>
       </section>
